methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:17: error: type mismatch;
 found   : Unit
 required: Boolean
    pickupBaggle();
                ^SlugTracking:16: error: type mismatch;
 found   : Unit
 required: Boolean
  if(isOverBaggle()){
  ^